# real_time_audio_process

real_time_audio_process/: CMakeLists.txt  alsa_audio_record.h  audio_record_process_thread.cpp  real_time_audio_process.kdev4
real_time_audio_process/.kdev4/: real_time_audio_process.kdev4
